# lornu-ai-cleaner

./: Cargo.toml  Dockerfile  default.nix
.github/workflows/: local-ci.yml
src/: main.rs
