[package]
name = "ai-agent-cleaner"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
walkdir = "2.4"
anyhow = "1.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
ignore = "0.4"
jsonwebtoken = "9"
ureq = { version = "2", features = ["json"] }
serde_derive = "1.0"
